Fix comment punctuation in Terraform format check step for consistency

--- a/.github/workflows/tf-plan-apply.yml
+++ b/.github/workflows/tf-plan-apply.yml
@@ -56,7 +56,7 @@ jobs:
 
 
 
-    # Checks that all Terraform configuration files adhere to a canonical format
+    # Checks that all Terraform configuration files adhere to a canonical format.
     # Will fail the build if not
     - name: Terraform Format
       run: terraform fmt -check
