--- a/.github/workflows/tf-plan-apply.yml
+++ b/.github/workflows/tf-plan-apply.yml
@@ -73,6 +73,11 @@ jobs:
           exit 0
         fi
         
+
+    - name: Import Azure Key Vault Secrets
+      run: |
+        terraform import azurerm_key_vault_secret.admin_password "https://kyvlt-avd-1.vault.azure.net/secrets/avd-admin-password"
+        terraform import azurerm_key_vault_secret.admin_username "https://kyvlt-avd-1.vault.azure.net/secrets/avd-admin-username"
     # Save plan to artifacts  
     - name: Publish Terraform Plan
       uses: actions/upload-artifact@v4
