--- a/.github/workflows/tf-plan-apply.yml
+++ b/.github/workflows/tf-plan-apply.yml
@@ -55,8 +55,18 @@ jobs:
     # Will fail the build if not
     - name: Terraform Format
       run: terraform fmt -check
+      
+    #import existing vm1
+    - name: Import the VM1
+      run: terraform import azurerm_virtual_machine.vm1 /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/rg-AVD-pool-dewc/providers/Microsoft.Compute/virtualMachines/avd-vm-1"
+    - name: Import the VM2
+      run: terraform import azurerm_virtual_machine.vm2 /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/rg-AVD-pool-dewc/providers/Microsoft.Compute/virtualMachines/avd-vm-2"
 
-    # Generates an execution plan for Terraform
+
+    - name: Import the Key Vault Access Policy
+      run: terraform import azurerm_key_vault_access_policy.policy /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/rg-AVD-pool-dewc/providers/Microsoft.KeyVault/vaults/kyvlt-avd-1/objectId/cf48698f-3853-4289-9f5df76de8f7"
+
+      # Generates an execution plan for Terraform
     # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
     - name: Terraform Plan
       id: tf-plan
