--- a/.github/workflows/tf-plan-apply.yml
+++ b/.github/workflows/tf-plan-apply.yml
@@ -56,18 +56,9 @@ jobs:
     - name: Terraform Format
       run: terraform fmt -check
       
-    - name: terraform state rm azurerm_windows_virtual_machine.avd_vm[0]
-      run: terraform state rm azurerm_windows_virtual_machine.avd_vm[0]
-   
-    - name: terraform state rm azurerm_windows_virtual_machine.avd_vm[1]
-      run: terraform state rm azurerm_windows_virtual_machine.avd_vm[1]
-
-    - name: Import the VM1
-      run: terraform import azurerm_windows_virtual_machine.avd_vm[0] /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/rg-AVD-pool-dewc/providers/Microsoft.Compute/virtualMachines/avd-vm-1
-    
-    - name: Import the VM2
-      run: terraform import azurerm_windows_virtual_machine.avd_vm[1] /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/rg-AVD-pool-dewc/providers/Microsoft.Compute/virtualMachines/avd-vm-2
-    
+    - name: Terraform Import Key Vault Access Policy
+      run: terraform import azurerm_key_vault_access_policy.terraform "/subscriptions/<subscription_id>/resourceGroups/rg-AVD-pool-dewc/providers/Microsoft.KeyVault/vaults/kyvlt-avd-1/objectId/cf48698f-3853-4289-9de2-9f5df76de8f7"
+ 
  
       # Generates an execution plan for Terraform
     # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
