--- a/.github/workflows/tf-plan-apply.yml
+++ b/.github/workflows/tf-plan-apply.yml
@@ -55,10 +55,9 @@ jobs:
     # Will fail the build if not
     - name: Terraform Format
       run: terraform fmt -check
-      
+
     - name: Terraform Import Key Vault Access Policy
-      run: terraform import azurerm_key_vault_access_policy.terraform "/subscriptions/<subscription_id>/resourceGroups/rg-AVD-pool-dewc/providers/Microsoft.KeyVault/vaults/kyvlt-avd-1/objectId/cf48698f-3853-4289-9de2-9f5df76de8f7"
- 
+      run: terraform import azurerm_key_vault_access_policy.terraform /subscriptions/${{ secrets.AZURE_SUBSCRIPTION_ID }}/resourceGroups/rg-AVD-pool-dewc/providers/Microsoft.KeyVault/vaults/kyvlt-avd-1/objectId/cf48698f-3853-4289-9de2-9f5df76de8f7
  
       # Generates an execution plan for Terraform
     # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
